fix(p.tsx): fix alignment issue with project name and version in the header section

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -9,16 +9,18 @@
 	height: 80vh;
 	overflow-y: auto;
 	overflow-x: hidden;
-	/* Add styles for the sidebar scroller */
+}
+
+.scrollbar {
 	scrollbar-width: thin;
 	scrollbar-color: rgba(155, 155, 155, 0.7) transparent;
 }
 
-.categorygrid::-webkit-scrollbar {
+.scrollbar::-webkit-scrollbar {
 	width: 8px;
 }
 
-.categorygrid::-webkit-scrollbar-thumb {
+.scrollbar::-webkit-scrollbar-thumb {
 	background-color: rgba(155, 155, 155, 0.7);
 	border-radius: 4px;
 }
